# cw-contracts-hackathon23

./: .gitignore  Cargo.toml  Makefile  README.md
contracts/identity-plugin/: Cargo.toml  README.md
contracts/identity-plugin/schema/: anoncreds-identity-plugin.json
contracts/identity-plugin/schema/raw/: query.json
contracts/identity-plugin/src/: contract.rs
contracts/launchpad/: Cargo.toml
contracts/launchpad/examples/: schema.rs
contracts/launchpad/schema/: avida-launchpad.json
contracts/launchpad/schema/raw/: instantiate.json  query.json  response_to_credential_pub_key.json  response_to_registered_contracts.json
contracts/launchpad/src/: contract.rs  error.rs  exec.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/proof-request-data/: Cargo.toml
contracts/proof-request-data/examples/: schema.rs
contracts/proof-request-data/schema/: avida-proof-request-data.json
contracts/proof-request-data/schema/raw/: execute.json  instantiate.json
contracts/proof-request-data/src/: contract.rs
contracts/rg-cw20/: Cargo.toml  README.md
contracts/rg-cw20/examples/: schema.rs
contracts/rg-cw20/schema/: rg-cw20.json
contracts/rg-cw20/schema/raw/: execute.json  instantiate.json  query.json  response_to_minter.json
contracts/rg-cw20/src/: allowances.rs  contract.rs  enumerable.rs  error.rs  exec.rs  lib.rs  marketing.rs  msg.rs  query.rs  state.rs  tests.rs  util.rs  verify_vc_proof.rs
contracts/tca-cw20/: Cargo.toml
contracts/tca-cw20/src/: allowances.rs  contract.rs  error.rs  msg.rs
contracts/vc-verifier/: Cargo.toml
contracts/vc-verifier/examples/: schema.rs
contracts/vc-verifier/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  vc-verifier.json
contracts/vc-verifier/schema/raw/: execute.json  instantiate.json  query.json
contracts/vc-verifier/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  test.rs  test_data.rs
data/: issuer_credential_pub_key.json  proof.json  proof_req_nonce.json  wallet_credential_priv_key.json
data/gayadeed/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  credential_schema.json
data/identrust/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  credential_schema.json  sub_proof_request.json
data/infocert/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  credential_schema.json
data/issuer/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  credential_schema.json
data/wallet/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  non_credential_schema.json  sub_proof_request.json
scripts/: build.sh  schemas.sh
ts-tools/: .env  accounts.ts  adapt_new_rg.spec.ts  create-rgtokens.ts  create_account_plugin.ts  deploy.ts  generatetypes.ts  mint_new_rg.spec.ts  package-lock.json  package.json  paths.ts  test-adapt.ts  test-create-rgtokens.ts  test_account_mint_rg.ts  test_account_transform.ts  test_adapt.ts  test_create_account_plugin.ts  test_revert_transform.ts  test_unadapt.ts  tsconfig.json  upload.ts  utils.ts
ts-tools/deploy/: injective-testnet-deployInfo.json  injective-testnet-uploadInfo.json  plugin_account.json  rg1_new_address.json  rg1_transform_address.json  rg3_transform_address.json
ts-tools/interfaces/: Cw20Adapter.client.ts  Cw20Adapter.types.ts  IdentityPlugin.client.ts  IdentityPlugin.types.ts  Launchpad.client.ts  Launchpad.types.ts  RgCw20.client.ts  RgCw20.types.ts  VcVerifier.client.ts  VcVerifier.types.ts
ts-tools/schema/cw20_adapter/schema/: cw20-adapter.json
ts-tools/tests/: adapt_rg.spec.ts  mint_new_rg.spec.ts  transform.spec.ts
ursa-demo/: Cargo.toml  issuer_credential_key_correctness_proof.json  issuer_credential_priv_key.json  proof.json  wallet_credential_key_correctness_proof.json  wallet_credential_pub_key.json
ursa-demo/setup_data/: gayadeed.json  identrust.json  infocert.json  issuers.json
ursa-demo/src/: lib.rs  main.rs
ursa-service/: .env  Cargo.toml  docker-compose.yaml  dockerfile  issuer_credential_key_correctness_proof.json  issuer_credential_priv_key.json  issuer_credential_pub_key.json  issuer_sub_proof_request.json  kyc_credential_sig.json  kyc_credential_values.json  proof.json  proof_req_nonce.json  setup-notes  wallet_credential_key_correctness_proof.json  wallet_credential_priv_key.json  wallet_credential_pub_key.json  wallet_credential_schema.json  wallet_credential_sig.json  wallet_credential_values.json  wallet_sub_proof_request.json
ursa-service/data/gayadeed/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  sub_proof_request.json
ursa-service/data/identrust/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json
ursa-service/data/infocert/: credential_correctness.json  credential_priv_key.json  credential_pub_key.json  sub_proof_request.json
ursa-service/migrations/2023-04-29-002040_create_issuers/: down.sql  up.sql
ursa-service/migrations/2023-04-29-054043_create_holders/: down.sql  up.sql
ursa-service/src/: lib.rs  main.rs  models.rs  schema.rs
