[workspace]
members = ["contracts/vc-verifier", "contracts/tca-cw20", "ursa-demo", "packages/vectis-verifier", "ursa-service"]

[profile.release.package.vc-verifier]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false




