[workspace]
members = ["contracts/*",  "packages/*" ]

[profile.release.package.vc-verifier]
codegen-units = 1
incremental = false

[profile.release.package.rg-cw20]
codegen-units = 1
incremental = false

[profile.release.package.avida-launchpad]
codegen-units = 1
incremental = false

[profile.release.package.avida-identity-plugin]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = { version = "1.0.1", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cosmwasm-schema = { version = "1.1" }
cw-controllers = "1.0.1"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "7cdccf35fb1a0"}
vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
serde_json = { version = "1.0"}
