[package]
name = "ursa-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# whalelephant/main branch 
# - fixes deps conflicts
# - addes serialise to the Ursa main repo for SubProofReq type 
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl", "serde"], rev = "7cdccf35fb1a0"} 
env_logger = "0.9.0"
log = "0.4.0"
serde = { version = "1.0"}
serde_json = { version = "1.0"}
