[package]
name = "ursa-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl", "serde"], version = "0.3.7"} 
env_logger = "0.9.0"
log = "0.4.0"
serde = { version = "1.0"}
serde_json = { version = "1.0"}
ursa-demo = { path = "../ursa-demo" }
