[package]
name = "ursa-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl", "serde"], rev = "e77cc1bf90e"} 
# ursa = { path = "../../ursa/libursa", default-features = false, features = ["cl", "serde"] } 
env_logger = "0.9.0"
log = "0.4.0"
serde = { version = "1.0"}
serde_json = { version = "1.0"}
ursa-demo = { path = "../ursa-demo" }
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
