[package]
name = "anoncreds-identity-plugin"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2018"
description = "A Queriable plugin for the Vectis Account for Anoncreds material"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cosmwasm-schema = { version = "1.1" }
cw-controllers = "1.0.1"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
avida-verifier = { path = "../../packages/avida-verifier" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
serde_json = "1.0"
