[package]
name = "launchpad"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>", "Arsen <arsen@nymlab.it"]
edition = "2018"
description = "Avida launchpad for regulatory grade applications"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
avida-verifier = { path = "../../packages/avida-verifier" }
rg-cw20 = { path = "../rg-cw20" }
