[package]
name = "avida-proof-request-data"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2018"
description = "Stores proof request data required for verification"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = {workspace = true}
cw2 = {workspace = true}
cw20 = {workspace = true}
cosmwasm-std = {workspace = true}
cosmwasm-schema = {workspace = true}
cw-storage-plus = {workspace = true}
cw-controllers = {workspace = true}
schemars = {workspace = true}
semver = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "7cdccf35fb1a0"}
# ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
avida-verifier = { path = "../../packages/avida-verifier" }
vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
serde_json = "1.0"

