[package]
name = "rg-cw20"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 regulatory grade token"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = {workspace = true} 
cw2 = {workspace = true} 
cw20 = {workspace = true}
cw-storage-plus = {workspace = true}
cosmwasm-std = {workspace = true}
cosmwasm-schema = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
avida-verifier = { path = "../../packages/avida-verifier" }
vc-verifier = { path = "../vc-verifier", features = ["library"] }
