[package]
name = "tca-cw20-base"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 regulatory grade token"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "1.0.1" 
cw2 = "1.0.1" 
cw20 =  "1.0.1" 
cw-storage-plus =  "1.0.1" 
cosmwasm-std =  "1.0.0" 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
vectis-verifier = { path = "../../packages/vectis-verifier" }
vc-verifier = { path = "../vc-verifier", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
