[package]
name = "vc-verifier"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2018"
description = "Verifier of verifiable credential proofs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
# ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
avida-verifier = { path = "../../packages/avida-verifier" }
vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
serde_json = "1.0"
ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
# ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
